--- a/week2/w2_day1.ipynb
+++ b/week2/w2_day1.ipynb
@@ -836,43 +836,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "7a48da13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Sum from command Line\n",
+    "import sys\n",
+    "def add_numbers():\n",
+    "    args=sys.argv[1:]\n",
+    "    nums=list(map(int,args))\n",
+    "    print(\"Sum=\",sum(nums))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ed79441e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Usage: python add.py num1 num2 num3\n"
+      "You borrowed Python 101\n",
+      "You returned Python 101\n",
+      "Available books: {'Python 101': 3, 'Data Science': 2}\n"
      ]
     }
    ],
    "source": [
-    "# Sum from Command Line\n",
-    "\n",
-    "import sys\n",
-    "\n",
-    "def main():\n",
-    "    if len(sys.argv) != 4:  \n",
-    "        print(\"Usage: python add.py num1 num2 num3\")\n",
-    "        return\n",
-    "\n",
-    "    num1 = int(sys.argv[1])\n",
-    "    num2 = int(sys.argv[2])\n",
-    "    num3 = int(sys.argv[3])\n",
-    "\n",
-    "    total = num1 + num2 + num3\n",
-    "    print(\"Sum =\", total)\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()"
+    "#Library System\n",
+    "class Library:\n",
+    "    def __init__(self,books):\n",
+    "        self.books=books\n",
+    "    def borrow(self,title):\n",
+    "        if title in self.books and self.books[title] > 0:\n",
+    "            self.books[title]-=1\n",
+    "            return f\"You borrowed {title}\"\n",
+    "        return f\"{title} not available\"\n",
+    "    def return_book(self,title):\n",
+    "        if title in self.books:\n",
+    "            self.books[title]+=1\n",
+    "            return f\"You returned {title}\"\n",
+    "        return f\"{title} not in library\"\n",
+    "    def show_books(self):\n",
+    "        print(\"Available books:\", self.books)\n",
+    "lib = Library({\"Python 101\":3,\"Data Science\":2})\n",
+    "print(lib.borrow(\"Python 101\"))\n",
+    "print(lib.return_book(\"Python 101\"))\n",
+    "lib.show_books()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "3c8c2e4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Access Granted\n",
+      "Deposited 200\n",
+      "Withdrew 100\n",
+      "Balance: 600\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ATM Machine with PIN\n",
+    "class atm_1:\n",
+    "    def __init__(self,pin,balance):\n",
+    "        self.pin=pin\n",
+    "        self.balance=balance\n",
+    "        self.is_authenticated=False\n",
+    "    def login(self,pin):\n",
+    "        if pin==self.pin:\n",
+    "            self.is_authenticated=True\n",
+    "            return \"Access Granted\"\n",
+    "        return \"Wrong PIN\"\n",
+    "    def check_balance(self):\n",
+    "        if self.is_authenticated:\n",
+    "            return f\"Balance: {self.balance}\"\n",
+    "    def deposit(self,amount):\n",
+    "        if self.is_authenticated:\n",
+    "            self.balance+=amount\n",
+    "            return f\"Deposited {amount}\"\n",
+    "    def withdraw(self,amount):\n",
+    "        if self.is_authenticated:\n",
+    "            if amount>self.balance:\n",
+    "                return \"Insufficient funds\"\n",
+    "            self.balance-=amount\n",
+    "            return f\"Withdrew {amount}\"\n",
+    "atm = atm_1(1234,500)\n",
+    "print(atm.login(1234))\n",
+    "print(atm.deposit(200))\n",
+    "print(atm.withdraw(100))\n",
+    "print(atm.check_balance())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f2bdeff1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dr. Smith is teaching Python\n",
+      "Alice enrolled in Python\n",
+      "Dr. Smith assigned: Project 1\n",
+      "Alice submitted: Project 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#University Sytem\n",
+    "class Professor:\n",
+    "    def __init__(self,name,subject):\n",
+    "        self.name=name\n",
+    "        self.subject=subject\n",
+    "    def teach(self,course):\n",
+    "        return f\"{self.name} is teaching {course}\"\n",
+    "    def give_assignment(self,task):\n",
+    "        return f\"{self.name} assigned: {task}\"\n",
+    "class Student:\n",
+    "    def __init__(self,name):\n",
+    "        self.name=name\n",
+    "        self.courses=[]\n",
+    "        self.assignments=[]\n",
+    "    def enroll(self,course):\n",
+    "        self.courses.append(course)\n",
+    "        return f\"{self.name} enrolled in {course}\"\n",
+    "    def submit_assign(self,task):\n",
+    "        self.assignments.append(task)\n",
+    "        return f\"{self.name} submitted: {task}\"\n",
+    "prof = Professor(\"Dr. Smith\", \"Computer Science\")\n",
+    "stud = Student(\"Alice\")\n",
+    "print(prof.teach(\"Python\"))\n",
+    "print(stud.enroll(\"Python\"))\n",
+    "print(prof.give_assignment(\"Project 1\"))\n",
+    "print(stud.submit_assign(\"Project 1\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ddeae4a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Booked 2 tickets for Avatar\n",
+      "Cancelled 1 ticket for Avatar\n",
+      "Movies: {'Avatar': 9, 'Batman': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Movie Ticket Booking\n",
+    "class Cinema:\n",
+    "    def __init__(self,movies):\n",
+    "        self.movies=movies\n",
+    "    def book(self,movie,seats):\n",
+    "        if(movie in self.movies and self.movies[movie]>=seats):\n",
+    "            self.movies[movie]-=seats\n",
+    "            return f\"Booked {seats} tickets for {movie}\"\n",
+    "        return \"Not enough seats\"\n",
+    "    def cancel(self,movie,seats):\n",
+    "        if(movie in self.movies):\n",
+    "            self.movies[movie]+=seats\n",
+    "            return f\"Cancelled {seats} ticket for {movie}\"\n",
+    "    def show_movies(self):\n",
+    "        print(\"Movies:\",self.movies)\n",
+    "cinema = Cinema({\"Avatar\":10,\"Batman\":5})\n",
+    "print(cinema.book(\"Avatar\",2))\n",
+    "print(cinema.cancel(\"Avatar\",1))\n",
+    "cinema.show_movies()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e535f3ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Burger added\n",
+      "Pizza added\n",
+      "Pizza price updated to 250\n",
+      "Burger removed\n",
+      "Menu: {'Pizza': 250}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Restaurant Menu\n",
+    "class Menu:\n",
+    "    def __init__(self):\n",
+    "        self.items={}\n",
+    "    def add_item(self,name,price):\n",
+    "        self.items[name]=price\n",
+    "        return f\"{name} added\"\n",
+    "    def remove_item(self,name):\n",
+    "        if name in self.items:\n",
+    "            del self.items[name]\n",
+    "            return f\"{name} removed\"\n",
+    "    def update_price(self,name,new_price):\n",
+    "        if name in self.items:\n",
+    "            self.items[name]=new_price\n",
+    "            return f\"{name} price updated to {new_price}\"\n",
+    "    def show_menu(self):\n",
+    "        print(\"Menu:\", self.items)\n",
+    "menu=Menu()\n",
+    "print(menu.add_item(\"Burger\",100))\n",
+    "print(menu.add_item(\"Pizza\",200))\n",
+    "print(menu.update_price(\"Pizza\",250))\n",
+    "print(menu.remove_item(\"Burger\"))\n",
+    "menu.show_menu()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed79441e",
+   "id": "468bcfbc",
    "metadata": {},
    "outputs": [],
    "source": []
